# documentinator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: demo.doctor.toml
src/: doc_types.rs  main.rs
src/cli/: commands.rs  gen.rs  mod.rs
src/generators/: markdown.rs  mod.rs
src/parsers/: mod.rs  toml.rs  toml_parser.rs
test_assets/: white_line_detection.doctor.toml  white_line_detection.md
