[package]
name = "documentinator"
version = "0.0.6"
edition = "2021"
authors = ["Andrew Ealovega"]

description = """
ROS2 documentation generator
"""
license = "MIT OR Apache-2.0"
homepage = "https://github.com/andyblarblar/documentinator"
repository = "https://github.com/andyblarblar/documentinator"
documentation = "https://docs.rs/documentinator/"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["ros", "documentation"]
rust-version="1.59"

[dependencies]
toml = "^0.5"
clap = { version = "^3.0", features = ['derive'] }
clap-verbosity-flag = "^0.4"

log = "^0.4"
env_logger = "^0.9"

serde_derive = "1"
serde = "1"

anyhow = "1"

[profile.release]
lto='thin'
strip='debuginfo'